--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -3,8 +3,12 @@
   padding: 0;
   box-sizing: border-box;
   font-style: normal;
-  font-family: Arial,sans-serif;
-  // -webkit-font-smoothing: antialiased;
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: transparent;
+}
+
+input,select,textarea{
+	outline: none
 }
